<resources>
    <string name="app_name">AndroidLab</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="whatDoesThisDo">What does this do?</string>
    <string name="loginHint">login name</string>
    <string name="radioButton">RadioButton</string>
    <string name="checkBox">CheckBox</string>
    <string name="loginButton">Login</string>
    <string name="flag">description</string>

    <string name="dialog_message">Would you like to finish activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="hereIsMyResponse">Here is my response</string>
    <string name="switchOn">Switch On</string>
    <string name="switchOff">Switch Off</string>
    <string name="startChat">Start Chat</string>
    <string name="sendButton">Send</string>

    <string name="startWeatherForecast">Weather</string>
    <string name="connection_error">Connection Error</string>
    <string name="xml_error">XML Error</string>

    <string name="message_here">Message Here</string>
    <string name="id_hint">ID=</string>
    <string name="delete_this_message">DELETE THIS MESSAGE</string>
</resources>
