<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/fragMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5px"
        android:hint="@string/message_here" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragMsg"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:hint="@string/id_hint"
        android:padding="5px" />

    <Button
        android:id="@+id/fragbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/delete_this_message" />


</RelativeLayout>